--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
         <div><span>Then my total is Rs <span id="totalMoney"></span></span></div>
         <br>
         <div>Problem 5</div>
-        <div>Your problem 5 html goes here</div>
+        <div><span>Given an advertising text: </span></div>
+        <div><span id="HindiMistakeLine"></span></div>
+        <div><span id="UrduMistakeLine"></span></div>
+        <div><span id="EnglishMistakeLine"></span></div>
+        <div><span>When I correct the text</span></div>
+        <div><span>Then the result should be:</span></div>
+        <div><span id="HindiCorrectLine"></span></div>
+        <div><span id="UrduCorrectLine"></span></div>
+        <div><span id="EnglishCorrectLine"></span></div>
+        <div><span</div>
     </body>
 </html>
