--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
         <div><span id="EnglishMistakeLine"></span></div>
         <div><span>When I correct the text</span></div>
         <div><span>Then the result should be:</span></div>
-        <div><span id="HindiCorrectLine"></span></div>
-        <div><span id="UrduCorrectLine"></span></div>
-        <div><span id="EnglishCorrectLine"></span></div>
+        <div><span id="correctLine"></span></div>
+        <div>count: <span id="wordCount"></span></div>
         <div><span</div>
     </body>
 </html>
